# weaverbird-prql

./: Cargo.toml
src/: lib.rs  main.rs  translate.rs
src/pipeline/: mod.rs
src/pipeline/steps/: aggregate.rs  domain.rs  filter.rs  mod.rs
