[package]
name = "weaverbird-prql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
enum_dispatch = "0.3.12"
prql-compiler = "0.10.0"
rstest = "0.18.2"
serde = "1.0.192"
serde_json = "1.0.108"
